--- a/src/MarvelFlow/MarvelFlow.App/App.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/App.xaml
@@ -37,6 +37,77 @@
                 <vs:UcListMovie />
             </DataTemplate>
 
+            <!-- Style Button Home -->
+            <Style TargetType="{x:Type Button}" x:Key="ButtonHome">
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Background" Value="Black"/>
+                <Setter Property="BorderBrush" Value="White"/>
+                <Setter Property="BorderThickness" Value="2"/>
+                <Setter Property="FontSize" Value="24"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="FontWeight" Value="Bold"/>
+                <Setter Property="Template" >
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                                <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="Black" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+
+                    <!-- Animates the button's opacity on mouse over. -->
+                    <EventTrigger RoutedEvent="Button.MouseEnter">
+                        <EventTrigger.Actions>
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation
+                  Storyboard.TargetProperty="(Button.FontSize)"
+                  From="24" To="30" Duration="0:0:0.2" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger.Actions>
+                    </EventTrigger>
+
+                    <!-- Returns the button's opacity to 1 when the mouse leaves. -->
+                    <EventTrigger RoutedEvent="Button.MouseLeave">
+                        <EventTrigger.Actions>
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation
+                  Storyboard.TargetProperty="(Button.FontSize)"
+                  To="24" Duration="0:0:0.1" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger.Actions>
+                    </EventTrigger>
+                </Style.Triggers>
+            </Style>
+
+            <Style TargetType="{x:Type Button}" x:Key="ButtonHomeVideo">
+                <Setter Property="Template" >
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                                <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <!-- Style Button (Opacity) -->
             <Style TargetType="{x:Type Button}" x:Key="OtherButton">
                 <Setter Property="Template" >
                     <Setter.Value>
@@ -83,6 +154,7 @@
                 </Style.Triggers>
             </Style>
 
+            <!-- Style Button (Selection List) -->
             <Style TargetType="{x:Type Button}" x:Key="ListSelect">
                 <Setter Property="Template" >
                     <Setter.Value>
@@ -92,7 +164,7 @@
                             </Border>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="Transparent" />
+                                    <Setter Property="Background" Value="Green" />
                                 </Trigger>
                             </ControlTemplate.Triggers>
                         </ControlTemplate>
@@ -100,28 +172,28 @@
                 </Setter>
                 <Style.Triggers>
 
-                    <!-- Animation MouseEnter -->
+                    <!-- MouseEnter Animation-->
                     <EventTrigger RoutedEvent="Button.MouseEnter">
                         <EventTrigger.Actions>
                             <BeginStoryboard>
                                 <Storyboard>
                                     <DoubleAnimation
                   Storyboard.TargetProperty="(Button.Opacity)"
-                  From="0.7" To="1" Duration="0:0:0.3" />
+                  From="1" To="0.6" Duration="0:0:0.3" />
 
                                 </Storyboard>
                             </BeginStoryboard>
                         </EventTrigger.Actions>
                     </EventTrigger>
 
-                    <!-- Animation Mouleave -->
+                    <!-- MouseLeave Animation-->
                     <EventTrigger RoutedEvent="Button.MouseLeave">
                         <EventTrigger.Actions>
                             <BeginStoryboard>
                                 <Storyboard>
                                     <DoubleAnimation
                   Storyboard.TargetProperty="(Button.Opacity)"
-                  To="0.7" Duration="0:0:0.3" />
+                  To="1" Duration="0:0:0.3" />
                                 </Storyboard>
                             </BeginStoryboard>
                         </EventTrigger.Actions>
