--- a/src/MarvelFlow/MarvelFlow.App/Views/UcProfile.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcProfile.xaml
@@ -34,7 +34,7 @@
             <TextBlock Text="NOM DE PROFIL" Grid.Row="0" Grid.Column="1" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="50" FontWeight="SemiBold"/>
 
             <Button Grid.Column="2" Grid.Row="0" Margin="30,20" Background="#e23636" BorderBrush="White" BorderThickness="4"
-                    Command="{Binding NavigateAdminCommand}">
+                    Command="{Binding NavigateAdminCommand}" Style="{StaticResource ButtonHome}">
                 <Run Foreground="White" FontSize="20" FontWeight="Medium">ADMIN MODE</Run>
             </Button>
         </Grid>
