--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListMovie.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListMovie.xaml
@@ -40,6 +40,8 @@
                 </StackPanel>
 
                 <ComboBox ItemsSource="{Binding EnumUniverse}" SelectedItem="{Binding SelectedUniverse,Mode=TwoWay}"
+                          SelectedIndex="0"
+                          HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15"
                           Foreground="Black" Background="White" Margin="26,30" >
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
@@ -52,8 +54,9 @@
             </UniformGrid>
 
             <TextBox Grid.Column="2" Text="{Binding SearchBar, UpdateSourceTrigger=PropertyChanged}"
-                       BorderBrush="White" Background="Black" 
-                     Foreground="White" BorderThickness="2" Margin="20,30"  />
+                     VerticalContentAlignment="Center" FontSize="15" FontWeight="Bold"
+                     BorderBrush="White" Background="Black" 
+                     Foreground="White" BorderThickness="2" Margin="20,30" />
         </Grid>
 
         <!--Ligne 2-->
