--- a/src/MarvelFlow/MarvelFlow.App/App.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/App.xaml
@@ -27,6 +27,9 @@
             <DataTemplate DataType="{x:Type vm:ProfileViewModel}">
                 <vs:UcProfile />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:LoginViewModel}">
+                <vs:UcLogin />
+            </DataTemplate>
             <DataTemplate DataType="{x:Type vm:AdminPanelViewModel}">
                 <vs:UcAdminPanel />
             </DataTemplate>
