--- a/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
@@ -102,24 +102,31 @@
         <Button Grid.Row="0" Grid.Column="1"
                 Background="Transparent" BorderThickness="0" Opacity="0.7"
                 Style="{StaticResource ButtonMarvel}"
-              Command="{Binding NavigateHomeCommand}">
+                Command="{Binding NavigateHomeCommand}">
             <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/marvelFlowLogo.png"
                    Stretch="Uniform">
             </Image>
         </Button>
         
         <!-- RIGHT PART -->
-        <Grid Grid.Column="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"  Content="Guest" Opacity="0.7"
-                    Background="Transparent" Foreground="White" Style="{StaticResource ButtonMarvel}"
-                    BorderThickness="0" 
-                    Command="{Binding NavigateUserWindowCommand}" FontSize="28" HorizontalAlignment="Right" VerticalAlignment="Center" FontStyle="Italic" TextOptions.TextHintingMode="Animated"/>
-            
-            <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/pdp2.png" Grid.Column="1" Margin="10" Opacity="0.7"/>
-        </Grid>
+        
+        <Button Grid.Column="2"  Opacity="0.7"
+                Background="Transparent" Foreground="White" Style="{StaticResource ButtonMarvel}"
+                BorderThickness="0" HorizontalContentAlignment="Stretch"
+                Command="{Binding NavigateUserWindowCommand}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.Column="0" Text="{Binding NameUser}" 
+                           HorizontalAlignment="Right" VerticalAlignment="Center"
+                           FontSize="28" FontStyle="Italic">
+                </TextBlock>
+                <Image Grid.Column="1" Source="{Binding ImageUser}" Margin="10" Opacity="0.7"/>
+            </Grid>
+        </Button>
+        
     </Grid>
 </Window>
