--- a/src/MarvelFlow/MarvelFlow.App/Views/UcEditHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcEditHero.xaml
@@ -6,8 +6,167 @@
              DataContext="{Binding EditHero,Source={StaticResource Locator}}"
              xmlns:local="clr-namespace:MarvelFlow.App.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock Foreground="White" Text="dacodac"/>
+             d:DesignHeight="700" d:DesignWidth="1200">
+    <!--STYLES -->
+    <UserControl.Resources>
+
+        <!--TEXTBLOCK -->
+        <Style TargetType="{x:Type TextBlock}" x:Key="MovieTextBlock">
+            <Setter Property="VerticalAlignment" Value="Bottom"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Margin" Value="0,3" />
+
+        </Style>
+
+        <!--TEXTBOX -->
+        <Style TargetType="{x:Type TextBox}" x:Key="MovieTextBox">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontWeight" Value="Light"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Background" Value="Black"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="FontStyle" Value="Italic"/>
+
+        </Style>
+    </UserControl.Resources>
+
+
+    <Grid Name="GridUserControl">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="6*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+
+
+
+
+
+        <!--LEFT PART -->
+
+        <!--LIST MOVIE -->
+        <Border Grid.Column="0" Grid.RowSpan="2" BorderBrush="White" BorderThickness="2"/>
+        <ListView ItemsSource="{Binding ListHerosView}" Grid.Column="0" Grid.Row="0"
+                      x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
+                       Background="{x:Null}" BorderThickness="0" >
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <UniformGrid Columns="1" HorizontalAlignment="Center" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Button Background="{x:Null}" Style="{StaticResource ListSelect}"
+                                BorderThickness="0"
+                                Command="{Binding DataContext.NavigateMovieCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcEditHero}}}"
+                                CommandParameter="{Binding .}">
+                        <TextBlock Text="{Binding  Name}" HorizontalAlignment="Center" 
+                                           VerticalAlignment="Bottom"  TextAlignment="Center" 
+                                           TextTrimming="WordEllipsis" TextWrapping="Wrap" Foreground="White" FontSize="20" FontWeight="Light" FontStyle="Italic"/>
+
+                    </Button>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <!--ADD MOVIE BUTTON-->
+        <Button  Grid.Row="2" Grid.Column="0" Content="ADD HERO" Foreground="White" 
+                        FontWeight="Bold" Background="#FF00C3EE" Margin="10"
+                        Style="{StaticResource ButtonHome}"/>
+
+        <!--RIGHT PART-->
+        <UniformGrid Grid.Row="0" Grid.Column="1" Rows="14" Margin="50,0">
+
+            <TextBlock Text="Id :"  Style="{StaticResource MovieTextBlock}"/>
+
+            <TextBox  Text="{Binding Id,Mode=TwoWay}"
+                     Style="{StaticResource MovieTextBox}"  />
+
+            <TextBlock Text="Name :"  
+                               Style="{StaticResource MovieTextBlock}"/>
+
+            <TextBox  Text="{Binding Name,Mode=TwoWay}"
+                     Style="{StaticResource MovieTextBox}"  />
+
+            <TextBlock Text="Image :" 
+                               Style="{StaticResource MovieTextBlock}" />
+            <TextBox  Text="{Binding Image,Mode=TwoWay}"
+                     Style="{StaticResource MovieTextBox}"  />
+
+            <TextBlock Text="Description :" 
+                               Style="{StaticResource MovieTextBlock}" />
+            <TextBox  Text="{Binding Desc,Mode=TwoWay}"
+                     Style="{StaticResource MovieTextBox}"  />
+
+            <TextBlock Text="Status :" 
+                               Style="{StaticResource MovieTextBlock}" />
+            <ComboBox ItemsSource="{Binding EnumStatus}" SelectedItem="{Binding SelectedStatus,Mode=TwoWay}"
+                          SelectedIndex="0"
+                          HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15"
+                          Foreground="Black" Background="White" >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding .}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+            <TextBlock Text="Team :" 
+                               Style="{StaticResource MovieTextBlock}" />
+            <ComboBox ItemsSource="{Binding EnumTeam}" SelectedItem="{Binding SelectedTeam,Mode=TwoWay}"
+                          SelectedIndex="0"
+                          HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15"
+                          Foreground="Black" Background="White" >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding .}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+            <TextBlock Text="Universe :" 
+                               Style="{StaticResource MovieTextBlock}" />
+            <ComboBox ItemsSource="{Binding EnumUniverse}" SelectedItem="{Binding SelectedUniverse,Mode=TwoWay}"
+                          SelectedIndex="0"
+                          HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15"
+                          Foreground="Black" Background="White" >
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding .}" />
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+        </UniformGrid>
+
+        <UniformGrid Columns="2" Rows="1" Grid.Column="1" Grid.Row="1">
+            <Button  Grid.Row="2" Grid.Column="1" Content="DELETE HERO" Foreground="White" 
+                        FontWeight="Bold" Background="#FFEE2000" Margin="130,10"
+                        Style="{StaticResource ButtonHome}" />
+            <Button  Grid.Row="2" Grid.Column="1" Content="VALIDATE" Foreground="White" 
+                        FontWeight="Bold" Background="#FF00EE82" Margin="130,10"
+                        Style="{StaticResource ButtonHome}" />
+
+        </UniformGrid>
     </Grid>
 </UserControl>
